Fix title on mobile for large names

--- a/styles/output.css
+++ b/styles/output.css
@@ -265,7 +265,7 @@ h6 {
 
 :root {
   --fs-900: 5rem;
-  --fs-800: 4rem;
+  --fs-800: 2rem;
   --fs-700: 1.5rem;
   --fs-600: 1rem;
   --fs-500: 1rem;
@@ -277,6 +277,24 @@ h6 {
   --ff-sans-normal: "Barlow", sans-serif;
 }
 
+@media (min-width: 500px) {
+  :root {
+    --fs-800: 3rem;
+    --fs-700: 2.5rem;
+    --fs-600: 1.5rem;
+    --fs-500: 1.25rem;
+    --fs-400: 1rem;
+  }
+}
+@media (min-width: 1000px) {
+  :root {
+    --fs-800: 5rem;
+    --fs-700: 3.5rem;
+    --fs-600: 2rem;
+    --fs-500: 1.75rem;
+    --fs-400: 1.125rem;
+  }
+}
 .ff-serif {
   font-family: var(--ff-serif);
 }
